<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_commission_on_sale"
        android:icon="@drawable/menu_first_fragment_icon"
        android:iconTint="@color/colorAccent"
        android:orderInCategory="101"
        android:title="@string/commission_on_sale"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action__commission_on_rent"
        android:icon="@drawable/menu_second_fragment_icon"
        android:iconTint="@color/colorAccent"
        android:orderInCategory="102"
        android:title="@string/commission_on_rent"
        app:showAsAction="ifRoom|withText" />


    <item
        android:id="@+id/action_title_deed_fees"
        android:icon="@drawable/menu_third_fragment_icon"
        android:iconTint="@color/colorAccent"
        android:orderInCategory="103"
        android:title="@string/title_deed_fees"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_loan_calculator"
        android:icon="@drawable/menu_third_fragment_icon"
        android:iconTint="@color/colorAccent"
        android:orderInCategory="103"
        android:title="@string/loan_calculator"
        app:showAsAction="ifRoom|withText" />

</menu>