<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin_15"
    tools:context=".UI.Activity.SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_first"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_margin_50"
        android:layout_marginTop="@dimen/default_margin_15"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_rate_of_sale"
            android:layout_width="@dimen/default_margin_100"
            android:layout_height="@dimen/default_margin_50"
            android:layout_marginEnd="@dimen/default_margin_30"
            android:gravity="center_vertical"
            android:text="@string/commission_on_sale_rate"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tv_sale_rate"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_margin_40"
            android:layout_marginStart="@dimen/default_margin_15"
            android:layout_marginTop="@dimen/default_margin_5"
            android:layout_marginEnd="@dimen/default_margin_30"
            android:layout_marginBottom="@dimen/default_margin_5"
            android:background="@drawable/textview_border"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_rate_of_sale"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_second"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_margin_50"
        android:layout_marginTop="@dimen/default_margin_15"
        app:layout_constraintTop_toBottomOf="@id/cl_first">

        <TextView
            android:id="@+id/tv_rate_of_rent"
            android:layout_width="@dimen/default_margin_100"
            android:layout_height="@dimen/default_margin_50"
            android:layout_marginEnd="@dimen/default_margin_30"
            android:gravity="center_vertical"
            android:text="@string/commission_on_rent_rate"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tv_rent_rate"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_margin_40"
            android:layout_marginStart="@dimen/default_margin_15"
            android:layout_marginTop="@dimen/default_margin_5"
            android:layout_marginEnd="@dimen/default_margin_30"
            android:layout_marginBottom="@dimen/default_margin_5"

            android:background="@drawable/textview_border"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_rate_of_rent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_third"
        android:layout_width="match_parent"
        android:layout_height="@dimen/default_margin_50"
        android:layout_marginTop="@dimen/default_margin_15"
        app:layout_constraintTop_toBottomOf="@id/cl_second">

        <TextView
            android:id="@+id/tv_deed_fees_rate"
            android:layout_width="@dimen/default_margin_100"
            android:layout_height="@dimen/default_margin_50"
            android:layout_marginEnd="@dimen/default_margin_30"
            android:gravity="center_vertical"
            android:text="@string/title_deed_fees_rate"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/tv_fees_rate"
            android:layout_width="0dp"
            android:layout_height="@dimen/default_margin_40"
            android:layout_marginStart="@dimen/default_margin_15"
            android:layout_marginTop="@dimen/default_margin_5"
            android:layout_marginEnd="@dimen/default_margin_30"
            android:layout_marginBottom="@dimen/default_margin_5"
            android:background="@drawable/textview_border"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_deed_fees_rate"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>